--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                   </div>
                   <div class="menu-linksbtn">
                     <ul>
-                      <li><a href="#"> Home </a></li>
-                      <div class="dropdown"><a href="#services"> Services </a>
+                      <li><a class="btnhd" href="#"> Home </a></li>
+                      <div class="dropdown"><a class="btnhd" href="#services"> Services </a>
                         <button class="dropbtn">
                           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"/>
@@ -61,9 +61,9 @@
                           <a href="/services/outdoorlivingcleaning.html">Outdoor Cleaning</a>
                         </div>
                       </div>
-                      <li><a href="#aboutus"> About us </a></li>
-                      <li><a href="#portfolio"> Portfolio </a></li>
-                      <li><a href="#reviews"> Reviews </a></li>
+                      <li><a class="btnhd" href="#aboutus"> About us </a></li>
+                      <li><a class="btnhd" href="#portfolio"> Portfolio </a></li>
+                      <li><a class="btnhd" href="#reviews"> Reviews </a></li>
                       <li class="callnow callw">
                         <a class="btn1" href="tel:+13802824104">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -103,7 +103,7 @@
             <div class="posterinfos infosw">
               <img src="./assets/logo-f.png" alt="">
               <ul>
-                <li><a href="https://www.instagram.com/figueiredoscleaning/" target="_blank">
+                <li><a class="btnsocials" href="https://www.instagram.com/figueiredoscleaning/" target="_blank">
                   <svg width="34" height="33" viewBox="0 0 34 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="16.9004" cy="16.5" r="16.5" fill="url(#paint0_linear_20056_2920)"/>
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M20.8694 7.18347H12.3836C9.45457 7.18347 7.08008 9.55797 7.08008 12.487V20.9728C7.08008 23.9018 9.45457 26.2763 12.3836 26.2763H20.8694C23.7984 26.2763 26.1729 23.9018 26.1729 20.9728V12.487C26.1729 9.55797 23.7984 7.18347 20.8694 7.18347ZM24.3167 20.9728C24.3108 22.8742 22.7708 24.4142 20.8694 24.4201H12.3836C10.4822 24.4142 8.94215 22.8742 8.93633 20.9728V12.487C8.94215 10.5856 10.4822 9.04554 12.3836 9.03972H20.8694C22.7708 9.04554 24.3108 10.5856 24.3167 12.487V20.9728ZM21.6649 12.7522C22.2507 12.7522 22.7256 12.2773 22.7256 11.6915C22.7256 11.1057 22.2507 10.6308 21.6649 10.6308C21.0791 10.6308 20.6042 11.1057 20.6042 11.6915C20.6042 12.2773 21.0791 12.7522 21.6649 12.7522ZM16.6265 11.9567C13.9903 11.9567 11.8533 14.0937 11.8533 16.7299C11.8533 19.3661 13.9903 21.5031 16.6265 21.5031C19.2627 21.5031 21.3997 19.3661 21.3997 16.7299C21.4026 15.4631 20.9005 14.2474 20.0048 13.3516C19.109 12.4558 17.8933 11.9539 16.6265 11.9567ZM13.7095 16.7299C13.7095 18.3409 15.0155 19.6469 16.6265 19.6469C18.2375 19.6469 19.5435 18.3409 19.5435 16.7299C19.5435 15.1189 18.2375 13.8129 16.6265 13.8129C15.0155 13.8129 13.7095 15.1189 13.7095 16.7299Z" fill="black"/>
@@ -116,7 +116,7 @@
                     </defs>
                     </svg>                    
                 </a></li>            
-                <li><a href="https://www.facebook.com/profile.php?id=61566283558712&is_tour_dismissed" target="_blank">
+                <li><a class="btnsocials" href="https://www.facebook.com/profile.php?id=61566283558712&is_tour_dismissed" target="_blank">
                   <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="16.5" cy="16.5" r="16.5" fill="url(#paint0_linear_20056_2923)"/>
                     <path d="M27.1088 16.8221C27.1088 10.9282 22.3599 6.15016 16.5017 6.15016C10.6435 6.15016 5.89453 10.9282 5.89453 16.8221C5.89453 22.1487 9.77339 26.5638 14.8443 27.3644V19.907H12.1511V16.8221H14.8443V14.471C14.8443 11.7963 16.428 10.3189 18.8507 10.3189C20.0114 10.3189 21.2251 10.5273 21.2251 10.5273V13.1536H19.8877C18.5701 13.1536 18.159 13.9763 18.159 14.8203V16.8221H21.1008L20.6306 19.907H18.159V27.3644C23.23 26.5638 27.1088 22.1489 27.1088 16.8221Z" fill="black"/>
@@ -129,7 +129,7 @@
                     </defs>
                     </svg>                    
                 </a></li>                     
-                <li><a href="https://www.google.com/search?" target="_blank"><svg width="34" height="33" viewBox="0 0 34 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <li><a class="btnsocials" href="https://www.google.com/search?" target="_blank"><svg width="34" height="33" viewBox="0 0 34 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle cx="17.1006" cy="16.5" r="16.5" fill="url(#paint0_linear_20056_2926)"/>
                   <path d="M26.1764 13.298C26.1764 14.5412 25.16 15.5667 23.9076 15.5667C22.6553 15.5667 21.6389 14.5412 21.6389 13.298C21.6389 14.5412 20.6225 15.5667 19.3701 15.5667C18.1178 15.5667 17.1014 14.5412 17.1014 13.298C17.1014 14.5412 16.085 15.5667 14.8326 15.5667C13.5803 15.5667 12.5639 14.5412 12.5639 13.298C12.5639 14.5412 11.5475 15.5667 10.2951 15.5667C9.04277 15.5667 8.02637 14.5412 8.02637 13.298L9.28779 8.37932C9.28779 8.37932 9.55097 7.39922 10.4766 7.39922H23.7261C24.6518 7.39922 24.9149 8.37932 24.9149 8.37932L26.1764 13.298ZM25.2689 16.6557V23.7342C25.2689 24.7325 24.4521 25.5492 23.4539 25.5492H10.7489C9.75062 25.5492 8.93387 24.7325 8.93387 23.7342V16.6557C9.53044 16.902 10.1823 16.9831 10.8211 16.8905C11.4598 16.7979 12.0618 16.535 12.5639 16.1294C13.19 16.6285 13.9796 16.928 14.8326 16.928C15.6947 16.928 16.4843 16.6285 17.1014 16.1294C17.7275 16.6285 18.5171 16.928 19.3701 16.928C20.2322 16.928 21.0218 16.6285 21.6389 16.1294C22.256 16.6285 23.0546 16.928 23.9076 16.928C24.3886 16.928 24.8514 16.8281 25.2689 16.6557ZM23.4539 21.3112C23.4539 21.1297 23.4539 20.9391 23.4085 20.7395L23.3813 20.5943H20.686V21.656H22.3286C22.2741 21.8557 22.2015 22.0553 22.0472 22.2187C21.7478 22.5182 21.3394 22.6815 20.9038 22.6815C20.45 22.6815 20.0054 22.4909 19.6787 22.1733C19.0525 21.529 19.0525 20.4854 19.6968 19.832C20.323 19.1967 21.3575 19.1967 22.0109 19.8047L22.138 19.9227L22.9003 19.1513L22.7551 19.0243C22.2469 18.5524 21.5753 18.2892 20.8675 18.2892H20.8584C20.1233 18.2892 19.4336 18.5705 18.9164 19.0787C18.3809 19.6051 18.0815 20.2948 18.0815 21.0117C18.0815 21.7377 18.3628 22.4093 18.8801 22.9084C19.4191 23.4345 20.1415 23.7306 20.8947 23.7342H20.9129C21.6389 23.7342 22.2832 23.471 22.7551 23.0082C23.1816 22.5726 23.4539 21.9192 23.4539 21.3112Z" fill="black"/>
                   <defs>
@@ -144,8 +144,6 @@
               </ul>
             </div>
             <div class="posterimg">
-              <video class="posterimgbg" src="./assets/Video.mp4" autoplay playsinline muted loop></video>
-              <div class="overlay"></div>
                <div class="posterimginfos">
                 <h1>CLEANING <br>SPACES</h1>
                 <h2>beautifully done</h2>
@@ -153,6 +151,8 @@
                </div>
             </div>
           </div>
+          <video class="posterimgbg" src="./assets/Video.mp4" autoplay playsinline muted loop></video>
+          <div class="overlay"></div>
           <div class="firstswip container">
             <swiper-container class="mySwiper1" space-between="10" slides-per-view="auto" loop="true" autoplay-delay="0"  autoplay-delay="0" autoplay-disable-on-interaction="false" slides-per-view="auto" speed="1000" freeMode="true">
               <swiper-slide class="swiper1">
