--- a/services/commercialcleaning.html
+++ b/services/commercialcleaning.html
@@ -82,7 +82,7 @@
             <div class="content">
                   <h1>COMMERCIAL</h1>
                 <span>Cleaning</span>
-                <p>A clean workplace is vital to a productive environment. Our commercial cleaning services are designed to maintain a pristine and professional atmosphere, allowing your business to thrive in a spotless space.</p>
+                <p>Enhance productivity and create a professional environment with our specialized commercial cleaning services. Our team of experts is equipped with the knowledge, tools, and techniques to ensure that your workspace is spotless and safe, from high dusting to detailed floor care. Ready to experience the immediate benefits of a clean and safe environment? Start your specialty cleaning project today and empower yourself and your team to do your best work in a space that shines with excellence.</p>
                 <button class="servicesbutton btn2 servibtn" id="posterbtn"><a href="#contact">Get a free estimate</a></button>
             </div>
         </div>
