--- a/services/garagecleaning.html
+++ b/services/garagecleaning.html
@@ -82,7 +82,8 @@
             <div class="content">
                   <h1>Garage </h1>
                 <span>Cleaning</span>
-                <p>Garages can easily become cluttered and dusty. Our garage cleaning services will clear the mess, giving you a more organized and functional space.</p>
+                <p>Garages can quickly become cluttered and dusty, making it challenging to find what you need. Our garage cleaning services will clear the mess, remove cobwebs and dust, sweep and clean, and wipe down surfaces to create a more organized and functional space. We also offer junk removal, with maintenance tips to help you keep your garage tidy. Let us help you reclaim and transform your garage into a practical, efficient, and usable area. Contact us today to get started!
+                </p>
                 <button class="servicesbutton btn2 servibtn" id="posterbtn"><a href="#contact">Get a free estimate</a></button>
             </div>
         </div>
