--- a/services/moveinoutcleaning.html
+++ b/services/moveinoutcleaning.html
@@ -82,7 +82,7 @@
             <div class="content">
                   <h1>Move-In/Move-Out </h1>
                 <span>Cleaning</span>
-                <p>Moving can be stressful, so let us take care of the cleaning. Our move-in/move-out services guarantee that your old place is left in perfect condition or your new home is fresh and ready to welcome you.</p>
+                <p>Moving can be stressful, so let us take care of the cleaning. Our move-in/move-out services ensure that your old place is left spotless or your new home is fresh and ready. We provide thorough cleaning, including the insides of drawers and cabinets, and sanitizing countertops, sinks, bathtubs, and showers. We also clean microwaves, ovens, ranges, and other appliances and vacuum all floors. Doors and door frames are spot-cleaned, and every surface, including window frames, light fixtures, and ceiling fans, is dusted to perfection. Let us handle the cleaning so you can focus on your move with peace of mind.</p>
                 <button class="servicesbutton btn2 servibtn" id="posterbtn"><a href="#contact">Get a free estimate</a></button>
             </div>
         </div>
