--- a/services/outdoorlivingcleaning.html
+++ b/services/outdoorlivingcleaning.html
@@ -82,7 +82,8 @@
             <div class="content">
                   <h1>Outdoor</h1>
                 <span>Cleaning</span>
-                <p>Your outdoor areas should be just as clean and inviting as the inside of your home. Our outdoor cleaning services cover everything from patios to walkways, ensuring your entire property looks its best.</p>
+                <p>Your outdoor areas should be just as clean and inviting as the inside of your home. Our outdoor cleaning services encompass a comprehensive range of solutions designed to enhance the appearance and longevity of your exterior spaces. We specialize in pressure washing patios, decks, and walkways, effectively removing dirt, grime, and stains to restore their original beauty. Additionally, we offer services for cleaning outdoor furniture and fixtures, ensuring every corner of your property is spotless. Let us help you transform your outdoor spaces into a pristine environment you can enjoy year-round!
+                </p>
                 <button class="servicesbutton btn2 servibtn" id="posterbtn"><a href="#contact">Get a free estimate</a></button>
             </div>
         </div>
