--- a/services/postconstructioncleaning.html
+++ b/services/postconstructioncleaning.html
@@ -82,7 +82,8 @@
             <div class="content">
                   <h1>Post-Construction </h1>
                 <span>Cleaning</span>
-                <p>Construction projects can leave a big mess, but we’ve covered it. Our post-construction cleaning services ensure that your newly renovated or built space is spotless, allowing you to enjoy the results without cleaning up.</p>
+                <p>Construction projects can create a mess, but we've got you covered. Our post-construction cleaning services ensure that your newly renovated or built space is spotless. We clean every area of your home, including the kitchen where we take care of countertops, cabinets, tables, chairs, and appliances. We also vacuum and mop the floors, tidy up, and take out the trash. Bathrooms are thoroughly cleaned, including mirrors, sinks, showers, bathtubs, and toilets. We wipe down and mop doors, baseboards, and floors. In bedrooms, we dust surfaces, make the bed with fresh sheets, and clean blinds, fans, windows, mirrors, and light fixtures.
+                </p>
                 <button class="servicesbutton btn2 servibtn" id="posterbtn"><a href="#contact">Get a free estimate</a></button>
             </div>
         </div>
