--- a/services/residentialcleaning.html
+++ b/services/residentialcleaning.html
@@ -82,7 +82,7 @@
             <div class="content">
                   <h1>RESIDENTIAL</h1>
                 <span>Cleaning</span>
-                <p>Your home is your sanctuary; we’re here to help keep it that way. Our detailed residential cleaning services ensure every room is spotless and comfortable, whether you need regular upkeep or a thorough, deep clean. Enjoy a sparkling home without lifting a finger.</p>
+                <p>Our cleaning service covers all your domestic cleaning needs and can be customized to your preferences. You'll meet the cleaner we select, and once you're satisfied, this person will become your regular cleaner, providing a consistent, personalized service. We go beyond basic cleaning to offer a thorough deep clean of your entire home, ensuring every surface is spotless. This includes meticulous attention to kitchens, doors, baseboards, cabinets, countertops, appliances, blinds, windows, and mirrors, leaving your home in pristine condition.</p>
                 <button class="servicesbutton btn2 servibtn" id="posterbtn"><a href="#contact">Get a free estimate</a></button>
             </div>
         </div>
