--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="postercontainer container bg-grey">
           <div class="poster">
             <div class="posterinfos infosw">
-              <img src="./assets/logo-f.png" alt="">
+              <img src="./assets/figueiredoslogo.png" alt="">
               <ul>
                 <li><a class="btnsocials" href="https://www.instagram.com/figueiredoscleaning/" target="_blank">
                   <svg width="34" height="33" viewBox="0 0 34 33" fill="none" xmlns="http://www.w3.org/2000/svg">
