--- a/index.html
+++ b/index.html
@@ -643,7 +643,8 @@
                  <p class=" reveal revealtext">We value your feedback and would love to hear about your experience with our cleaning team. Your input is crucial in our continuous efforts to improve and provide better care for your space!</p>         
             </div>
             <!--  REVIEWS GOOGLE -->
-
+            <script src="https://static.elfsight.com/platform/platform.js" async></script>
+            <div class="elfsight-app-c6d3fddc-855c-4f85-ac49-845dbd9d1e21" data-elfsight-app-lazy></div> <br>
             <button class="servicesbutton btn1"><a href="#contact">Get a free estimate</a></button>      
         </div>
         <div class="aboutcontainer container" id="aboutus">
