--- a/index.html
+++ b/index.html
@@ -1037,9 +1037,9 @@
         <div class="rights">
             <p>© 2024 Figueiredos Cleaning. All rights reserved.</p>
             <ul>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Terms of Service</a></li>
-                <li><a href="#">Cookies Settings</a></li>
+                <li><a href="https://figueiredoscleaning.com/privacypolicy.html">Privacy Policy</a></li>
+                <li><a href="https://figueiredoscleaning.com/termsandconditions.html">Terms of Service</a></li>
+                <li><a href="https://figueiredoscleaning.com/cookies.html">Cookies Settings</a></li>
             </ul>
         </div>
       </footer>
