--- a/services/postconstructioncleaning.html
+++ b/services/postconstructioncleaning.html
@@ -682,9 +682,9 @@
       <div class="rights">
           <p>© 2024 Figueiredos Cleaning. All rights reserved.</p>
           <ul>
-              <li><a href="../index.html#">Privacy Policy</a></li>
-              <li><a href="../index.html#">Terms of Service</a></li>
-              <li><a href="../index.html#">Cookies Settings</a></li>
+              <li><a href="https://figueiredoscleaning.com/privacypolicy.html">Privacy Policy</a></li>
+              <li><a href="https://figueiredoscleaning.com/termsandconditions.html">Terms of Service</a></li>
+              <li><a href="https://figueiredoscleaning.com/cookies.html">Cookies Settings</a></li>
           </ul>
       </div>
     </footer>
