--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </defs>
                     </svg>                    
                 </a></li>            
-                <li><a class="btnsocials" href="https://www.facebook.com/profile.php?id=61566283558712&is_tour_dismissed" target="_blank">
+                <li><a class="btnsocials" href="https://www.facebook.com/profile.php?id=61566283558712" target="_blank">
                   <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="16.5" cy="16.5" r="16.5" fill="url(#paint0_linear_20056_2923)"/>
                     <path d="M27.1088 16.8221C27.1088 10.9282 22.3599 6.15016 16.5017 6.15016C10.6435 6.15016 5.89453 10.9282 5.89453 16.8221C5.89453 22.1487 9.77339 26.5638 14.8443 27.3644V19.907H12.1511V16.8221H14.8443V14.471C14.8443 11.7963 16.428 10.3189 18.8507 10.3189C20.0114 10.3189 21.2251 10.5273 21.2251 10.5273V13.1536H19.8877C18.5701 13.1536 18.159 13.9763 18.159 14.8203V16.8221H21.1008L20.6306 19.907H18.159V27.3644C23.23 26.5638 27.1088 22.1489 27.1088 16.8221Z" fill="black"/>
@@ -1022,7 +1022,7 @@
                   <h3>Follow us</h3>
                     <ul>
                         <li>
-                          <a href="https://www.facebook.com/profile.php?id=61566283558712&is_tour_dismissed"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="24" viewBox="0 0 25 24" fill="none">
+                          <a href="https://www.facebook.com/profile.php?id=61566283558712"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="24" viewBox="0 0 25 24" fill="none">
                           <path d="M22.6665 12.3033C22.6665 6.7467 18.1894 2.24219 12.6665 2.24219C7.14365 2.24219 2.6665 6.7467 2.6665 12.3033C2.6665 17.325 6.32334 21.4874 11.104 22.2422V15.2116H8.56494V12.3033H11.104V10.0867C11.104 7.56515 12.597 6.17231 14.8811 6.17231C15.9753 6.17231 17.1196 6.36882 17.1196 6.36882V8.8448H15.8587C14.6165 8.8448 14.229 9.62041 14.229 10.4161V12.3033H17.0024L16.5591 15.2116H14.229V22.2422C19.0097 21.4874 22.6665 17.3252 22.6665 12.3033Z" fill="#EEEEF0"/>
                         </svg> Facebook</a></li>
                         <li>
