--- a/thanks.html
+++ b/thanks.html
@@ -5,42 +5,68 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/magnific-popup.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/style.css">
-  <title>GRA Carpentry - THE FRAMING EXPERTS</title>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-KG3RZKBH');</script>
+  <!-- End Google Tag Manager -->
+  <!-- Meta Pixel Code -->
+  <script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '1421420465636319');
+  fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=1421420465636319&ev=PageView&noscript=1"
+  /></noscript>
+  <!-- End Meta Pixel Code -->
+    <script src="https://www.google.com/recaptcha/enterprise.js" async defer></script>
+  <title>Figueiredos - Cleaning Spaces Beautifully Done</title>
   <link rel="icon" type="image/x-icon" href="./assets/icon.png">
   <meta name="author" content="Flavia Sigoli"/>
   <meta http-equiv="content-language" content="en-US" />
-  <meta name="copyright" content="Copyright © 2024 Gra Carpentry" />
+  <meta name="copyright" content="Copyright © 2024 Figueiredos Cleaning" />
   <meta http-equiv="content-type" content="html; charset=UTF-8" />
-  <meta name="description" content="FP Gra Carpentry Services" />
-  <meta name="keywords" content="portfolio, Business, Gra Carpentry, Gra Carpentry, Gra Carpentry, Carpentry, Carpentry Services, Services, about, OHIO, Connecticut">
+  <meta name="description" content="FP Figueiredos Cleaning Services" />
+  <meta name="keywords" content="portfolio, Business, Figueiredos Cleaning, Figueiredos Cleaning, Figueiredos Cleaning, Cleaning, Cleaning Services, Services, about, OHIO">
   <meta name="robots" content="index, follow">
-</head>
   <style>    
+    body{
+          height: 100%;
+    }
     .thankscontainer{
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        background-color: #A0905F;
         color: #000;
-        height: 100vw;
         text-align: center;
-        gap: 80px;
+        gap: 30px;
+        padding: 130px 0 50px;
     }
     .thankscontainer svg{
-        width: 150px;
+        width: 50px;
     }
     .thankscontainer p{
         max-width: 1100px;
         padding: 0 20px;
-        font-size: 50px;
+        font-size: 30px;
     }
     .thankscontainer button{
         border: none;
@@ -48,13 +74,66 @@
         background-color: transparent;
     }
     .thankscontainer .callnow a{
-        color: #000;
         text-decoration: none;
         font-weight: bold;
         line-height:200%;
     }
   </style>
 </head>
+    <header> 
+        <div id="home">
+            <nav class="navbar" id="homenav">
+              <img src="./assets/logo-f.png" alt="" class="logow" draggable="false">
+              <div class="callnow callm">
+                <a class="btn1" href="tel:+13802824104">
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M15.0499 5C16.0267 5.19057 16.9243 5.66826 17.628 6.37194C18.3317 7.07561 18.8094 7.97326 18.9999 8.95M15.0499 1C17.0792 1.22544 18.9715 2.13417 20.4162 3.57701C21.8608 5.01984 22.7719 6.91101 22.9999 8.94M21.9999 16.92V19.92C22.0011 20.1985 21.944 20.4742 21.8324 20.7293C21.7209 20.9845 21.5572 21.2136 21.352 21.4019C21.1468 21.5901 20.9045 21.7335 20.6407 21.8227C20.3769 21.9119 20.0973 21.9451 19.8199 21.92C16.7428 21.5856 13.7869 20.5341 11.1899 18.85C8.77376 17.3147 6.72527 15.2662 5.18993 12.85C3.49991 10.2412 2.44818 7.27099 2.11993 4.18C2.09494 3.90347 2.12781 3.62476 2.21643 3.36162C2.30506 3.09849 2.4475 2.85669 2.6347 2.65162C2.82189 2.44655 3.04974 2.28271 3.30372 2.17052C3.55771 2.05833 3.83227 2.00026 4.10993 2H7.10993C7.59524 1.99522 8.06572 2.16708 8.43369 2.48353C8.80166 2.79999 9.04201 3.23945 9.10993 3.72C9.23656 4.68007 9.47138 5.62273 9.80993 6.53C9.94448 6.88792 9.9736 7.27691 9.89384 7.65088C9.81408 8.02485 9.6288 8.36811 9.35993 8.64L8.08993 9.91C9.51349 12.4135 11.5864 14.4864 14.0899 15.91L15.3599 14.64C15.6318 14.3711 15.9751 14.1858 16.3491 14.1061C16.723 14.0263 17.112 14.0555 17.4699 14.19C18.3772 14.5286 19.3199 14.7634 20.2799 14.89C20.7657 14.9585 21.2093 15.2032 21.5265 15.5775C21.8436 15.9518 22.0121 16.4296 21.9999 16.92Z" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>                        
+                  Call now <br>(380) 282-4104</a>
+              </div>   
+              <div class="btn-toggle menu_icon_box">
+                  <div class="line1"></div>
+                  <div class="line2"></div>
+                  <div class="line3"></div>
+              </div>
+                <div class="menu-links box">
+                  <div class="nonebar">
+                    <img src="./assets/logo-f.png" alt="" class="logo-m" draggable="false">
+                  </div>
+                  <div class="menu-linksbtn">
+                    <ul>
+                      <li><a class="btnhd" href="index.html/#"> Home </a></li>
+                      <div class="dropdown"><a class="btnhd" href="index.html/#services"> Services </a>
+                        <button class="dropbtn">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"/>
+                          </svg>
+                        </button>
+                        <div class="dropdown-content">
+                          <a href="/services/residentialcleaning.html">Residential Cleaning</a>
+                          <a href="/services/commercialcleaning.html">Commercial Cleaning</a>
+                          <a href="/services/moveinoutcleaning.html">Move in & Move out Cleaning</a>
+                          <a href="/services/postconstructioncleaning.html">Post-construction Cleaning</a>
+                          <a href="/services/garagecleaning.html">Garage Cleaning</a>
+                          <a href="/services/outdoorlivingcleaning.html">Outdoor Cleaning</a>
+                        </div>
+                      </div>
+                      <li><a class="btnhd" href="index.html/#aboutus"> About us </a></li>
+                      <li><a class="btnhd" href="index.html/#portfolio"> Portfolio </a></li>
+                      <li><a class="btnhd" href="index.html/#reviews"> Reviews </a></li>
+                      <li class="callnow callw">
+                        <a class="btn1" href="tel:+13802824104">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15.0499 5C16.0267 5.19057 16.9243 5.66826 17.628 6.37194C18.3317 7.07561 18.8094 7.97326 18.9999 8.95M15.0499 1C17.0792 1.22544 18.9715 2.13417 20.4162 3.57701C21.8608 5.01984 22.7719 6.91101 22.9999 8.94M21.9999 16.92V19.92C22.0011 20.1985 21.944 20.4742 21.8324 20.7293C21.7209 20.9845 21.5572 21.2136 21.352 21.4019C21.1468 21.5901 20.9045 21.7335 20.6407 21.8227C20.3769 21.9119 20.0973 21.9451 19.8199 21.92C16.7428 21.5856 13.7869 20.5341 11.1899 18.85C8.77376 17.3147 6.72527 15.2662 5.18993 12.85C3.49991 10.2412 2.44818 7.27099 2.11993 4.18C2.09494 3.90347 2.12781 3.62476 2.21643 3.36162C2.30506 3.09849 2.4475 2.85669 2.6347 2.65162C2.82189 2.44655 3.04974 2.28271 3.30372 2.17052C3.55771 2.05833 3.83227 2.00026 4.10993 2H7.10993C7.59524 1.99522 8.06572 2.16708 8.43369 2.48353C8.80166 2.79999 9.04201 3.23945 9.10993 3.72C9.23656 4.68007 9.47138 5.62273 9.80993 6.53C9.94448 6.88792 9.9736 7.27691 9.89384 7.65088C9.81408 8.02485 9.6288 8.36811 9.35993 8.64L8.08993 9.91C9.51349 12.4135 11.5864 14.4864 14.0899 15.91L15.3599 14.64C15.6318 14.3711 15.9751 14.1858 16.3491 14.1061C16.723 14.0263 17.112 14.0555 17.4699 14.19C18.3772 14.5286 19.3199 14.7634 20.2799 14.89C20.7657 14.9585 21.2093 15.2032 21.5265 15.5775C21.8436 15.9518 22.0121 16.4296 21.9999 16.92Z" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>                        
+                        Call now <br>(380) 282-4104</a>
+                      </li>   
+                    </ul>
+                  </div>
+                </div>
+            </nav>
+        </div>
+    </header>
 <body>
     <main class="thankscontainer">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g data-name="4.Check mark"><path d="M12 24a12 12 0 1 1 12-12 12.013 12.013 0 0 1-12 12zm0-22a10 10 0 1 0 10 10A10.011 10.011 0 0 0 12 2z"/><path d="m10 17.414-3.707-3.707 1.414-1.414L10 14.586l7.293-7.293 1.414 1.414L10 17.414z"/></g></svg>
@@ -63,8 +142,67 @@
             <br><br>
             Our team will review your message and get back to you as soon as possible. If you have any additional questions or need further assistance in the meantime, please don't hesitate to let us know.
             </p>
-            <div class="callnow"><button><a href="./index.html" target="_blank">Back to Home Page</a></button></div>
+            <div class="callnow"><button><a href="https://figueiredoscleaning.com/">Back to Home Page</a></button></div>
     </main>
+    <footer>
+        <div class="footergrid">
+          <div class="footerimglogo">
+            <img src="./assets/figueiredoslogo.png" class="reveal revealtext" alt="Figueiredos logo" draggable="false">
+          </div>
+          <div class="footermenu">
+              <div class="footernav">
+                  <ul>
+                      <li>
+                      <a href="index.html/#">Home</a></li>
+                      <li>
+                      <a href="index.html/#services">Services</a></li>
+                      <li>
+                      <a href="index.html/#aboutus">About us</a></li>
+                      <li>
+                      <a href="index.html/#portfolio">Gallery</a></li>
+                      <li>
+                      <a href="index.html/#reviews">Reviews</a></li>
+                      <li>
+                      <a href="index.html/#contact">Contact </a></li>
+                  </ul>
+              </div>
+                <div class="address opentime">
+                    <ul>
+                        <li style="font-weight:bold;">Our Hours</li>
+                        <li>Mon: 8am - 6pm</li>
+                        <li>Tue: 8am - 6pm</li>
+                        <li>Wed: 8am - 6pm</li>
+                        <li>Thu: 8am - 6pm</li>
+                        <li>Fri: 8am - 6pm</li>
+                        <li>Sat: 8am - 2pm</li>
+                        <li>Sun: Closed</li>
+                    </ul>
+                </div>
+                <div class="address">
+                  <h3>Follow us</h3>
+                    <ul>
+                        <li>
+                          <a href="https://www.facebook.com/profile.php?id=61566283558712"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="24" viewBox="0 0 25 24" fill="none">
+                          <path d="M22.6665 12.3033C22.6665 6.7467 18.1894 2.24219 12.6665 2.24219C7.14365 2.24219 2.6665 6.7467 2.6665 12.3033C2.6665 17.325 6.32334 21.4874 11.104 22.2422V15.2116H8.56494V12.3033H11.104V10.0867C11.104 7.56515 12.597 6.17231 14.8811 6.17231C15.9753 6.17231 17.1196 6.36882 17.1196 6.36882V8.8448H15.8587C14.6165 8.8448 14.229 9.62041 14.229 10.4161V12.3033H17.0024L16.5591 15.2116H14.229V22.2422C19.0097 21.4874 22.6665 17.3252 22.6665 12.3033Z" fill="#EEEEF0"/>
+                        </svg> Facebook</a></li>
+                        <li>
+                          <a href="https://www.instagram.com/figueiredoscleaning/" target="_blank"><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path fill-rule="evenodd" clip-rule="evenodd" d="M16.6665 3.24219H8.6665C5.90508 3.24219 3.6665 5.48077 3.6665 8.24219V16.2422C3.6665 19.0036 5.90508 21.2422 8.6665 21.2422H16.6665C19.4279 21.2422 21.6665 19.0036 21.6665 16.2422V8.24219C21.6665 5.48077 19.4279 3.24219 16.6665 3.24219ZM19.9165 16.2422C19.911 18.0348 18.4591 19.4867 16.6665 19.4922H8.6665C6.87385 19.4867 5.42199 18.0348 5.4165 16.2422V8.24219C5.42199 6.44954 6.87385 4.99768 8.6665 4.99219H16.6665C18.4591 4.99768 19.911 6.44954 19.9165 8.24219V16.2422ZM17.4165 8.49219C17.9688 8.49219 18.4165 8.04447 18.4165 7.49219C18.4165 6.93991 17.9688 6.49219 17.4165 6.49219C16.8642 6.49219 16.4165 6.93991 16.4165 7.49219C16.4165 8.04447 16.8642 8.49219 17.4165 8.49219ZM12.6665 7.74219C10.1812 7.74219 8.1665 9.75691 8.1665 12.2422C8.1665 14.7275 10.1812 16.7422 12.6665 16.7422C15.1518 16.7422 17.1665 14.7275 17.1665 12.2422C17.1692 11.0479 16.6959 9.90176 15.8514 9.05727C15.0069 8.21278 13.8608 7.73953 12.6665 7.74219ZM9.9165 12.2422C9.9165 13.761 11.1477 14.9922 12.6665 14.9922C14.1853 14.9922 15.4165 13.761 15.4165 12.2422C15.4165 10.7234 14.1853 9.49219 12.6665 9.49219C11.1477 9.49219 9.9165 10.7234 9.9165 12.2422Z" fill="#EEEEF0"/>
+                          </svg>
+                          Instagram</a></li>
+                    </ul>
+                </div>
+          </div>
+        </div>
+        <div class="rights">
+            <p>© 2024 Figueiredos Cleaning. All rights reserved.</p>
+            <ul>
+                <li><a href="https://figueiredoscleaning.com/privacypolicy.html">Privacy Policy</a></li>
+                <li><a href="https://figueiredoscleaning.com/termsandconditions.html">Terms of Service</a></li>
+                <li><a href="https://figueiredoscleaning.com/cookies.html">Cookies Settings</a></li>
+            </ul>
+        </div>
+      </footer>
     <script src="./js/jquery.min.js"></script>
     <script src="./js/javascript.js"></script>
     <script src="./js/swiper-bundle.min.js"></script>
@@ -74,12 +212,12 @@
       {
         "@context": "http://schema.org",
         "@type": "LocalBusiness",
-        "name": "Gra Carpentry",
-        "image": "https://www.gracarpentry.com/",
+        "name": "Figueiredos Cleaning",
+        "image": "https://www.figueiredos.com/",
         "telephone": [
-          "(856) 206-6022"
+          "(380) 282-4104"
         ],
-        "email": "info@gracarpentry.com",
+        "email": "contact@figueiredoscleaning.com",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "",
